Ofuscate (#1)
* add ofuscate

* order swagger servers
